--- a/package.yml
+++ b/package.yml
@@ -6,3 +6,10 @@ supportpage: https://novinet.de
 requires:
     php:
         version: '>=5.6' # benötigt mindestens PHP 5.6
+    yform: ^1.0.0
+    yform_spam_protection: ^1.0.0
+    mform: ^1.0.0
+    mblock: ^1.0.0
+    developer: ^1.0.0
+    cke5: ^1.0.0
+
